add GC collector tables to README; tidy crypto.md